--- a/Alejandro_platzi/platzi-market/platzi-market/build.gradle
+++ b/Alejandro_platzi/platzi-market/platzi-market/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'org.projectlombok:lombok:1.18.20'
 
 	runtimeOnly 'org.postgresql:postgresql'
 
